rtlcore/parser/rtlcore_parser.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: Program "end of file"

    1 Program: "end of file"
    2        | ModuleDeclList "end of file"

    3 ModuleDeclList: ModuleDeclList ModuleDecl
    4               | ModuleDecl

    5 ModuleDecl: VERI_MODULE ID LEFT_PAREN ModulePorts RIGHT_PAREN SEMI_COLON StatementList VERI_ENDMODULE

    6 ModulePorts: ModulePorts COMMA ID
    7            | ID

    8 StatementList: StatementList Statement SEMI_COLON
    9              | Statement SEMI_COLON

   10 Statement: VERI_INPUT ConnectList
   11          | VERI_OUTPUT ConnectList
   12          | VERI_WIRE ConnectList
   13          | Instantiation
   14          | Assignment

   15 Assignment: VERI_ASSIGN ID LEFT_BRAKET INTEGER RIGHT_BRAKET EQUAL BINARY_VAL

   16 ConnectList: ConnectList COMMA Connect
   17            | Connect

   18 Connect: Range ID
   19        | ID

   20 Range: LEFT_BRAKET INTEGER COLON INTEGER RIGHT_BRAKET

   21 Instantiation: ID InstId LEFT_PAREN PortValList RIGHT_PAREN

   22 InstId: ID LEFT_BRAKET INTEGER RIGHT_BRAKET
   23       | ID

   24 PortValList: PortValList COMMA PortValBus
   25            | PortValList COMMA PortVal
   26            | PortVal
   27            | PortValBus

   28 PortValBus: LEFT_CURL PortValList RIGHT_CURL

   29 PortVal: BINARY_VAL
   30        | ID
   31        | ID LEFT_BRAKET INTEGER RIGHT_BRAKET
   32        | ID LEFT_BRAKET INTEGER COLON INTEGER RIGHT_BRAKET
   33        | DOT ID LEFT_PAREN PortValList RIGHT_PAREN


Terminals, with rules where they appear

"end of file" (0) 0 1 2
error (256)
ERROR (258)
INTEGER (259) 15 20 22 31 32
ID (260) 5 6 7 15 18 19 21 22 23 30 31 32 33
BINARY_VAL (261) 15 29
VERI_MODULE (262) 5
VERI_ENDMODULE (263) 5
VERI_INPUT (264) 10
VERI_OUTPUT (265) 11
VERI_WIRE (266) 12
VERI_ASSIGN (267) 15
LEFT_PAREN (268) 5 21 33
RIGHT_PAREN (269) 5 21 33
COMMA (270) 6 16 24 25
SEMI_COLON (271) 5 8 9
LEFT_CURL (272) 28
RIGHT_CURL (273) 28
LEFT_BRAKET (274) 15 20 22 31 32
RIGHT_BRAKET (275) 15 20 22 31 32
COLON (276) 20 32
DOT (277) 33
EQUAL (278) 15


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
Program (25)
    on left: 1 2, on right: 0
ModuleDeclList (26)
    on left: 3 4, on right: 2 3
ModuleDecl (27)
    on left: 5, on right: 3 4
ModulePorts (28)
    on left: 6 7, on right: 5 6
StatementList (29)
    on left: 8 9, on right: 5 8
Statement (30)
    on left: 10 11 12 13 14, on right: 8 9
Assignment (31)
    on left: 15, on right: 14
ConnectList (32)
    on left: 16 17, on right: 10 11 12 16
Connect (33)
    on left: 18 19, on right: 16 17
Range (34)
    on left: 20, on right: 18
Instantiation (35)
    on left: 21, on right: 13
InstId (36)
    on left: 22 23, on right: 21
PortValList (37)
    on left: 24 25 26 27, on right: 21 24 25 28 33
PortValBus (38)
    on left: 28, on right: 24 27
PortVal (39)
    on left: 29 30 31 32 33, on right: 25 26


State 0

    0 $accept: . Program "end of file"

    "end of file"  shift, and go to state 1
    VERI_MODULE    shift, and go to state 2

    Program         go to state 3
    ModuleDeclList  go to state 4
    ModuleDecl      go to state 5


State 1

    1 Program: "end of file" .

    $default  reduce using rule 1 (Program)


State 2

    5 ModuleDecl: VERI_MODULE . ID LEFT_PAREN ModulePorts RIGHT_PAREN SEMI_COLON StatementList VERI_ENDMODULE

    ID  shift, and go to state 6


State 3

    0 $accept: Program . "end of file"

    "end of file"  shift, and go to state 7


State 4

    2 Program: ModuleDeclList . "end of file"
    3 ModuleDeclList: ModuleDeclList . ModuleDecl

    "end of file"  shift, and go to state 8
    VERI_MODULE    shift, and go to state 2

    ModuleDecl  go to state 9


State 5

    4 ModuleDeclList: ModuleDecl .

    $default  reduce using rule 4 (ModuleDeclList)


State 6

    5 ModuleDecl: VERI_MODULE ID . LEFT_PAREN ModulePorts RIGHT_PAREN SEMI_COLON StatementList VERI_ENDMODULE

    LEFT_PAREN  shift, and go to state 10


State 7

    0 $accept: Program "end of file" .

    $default  accept


State 8

    2 Program: ModuleDeclList "end of file" .

    $default  reduce using rule 2 (Program)


State 9

    3 ModuleDeclList: ModuleDeclList ModuleDecl .

    $default  reduce using rule 3 (ModuleDeclList)


State 10

    5 ModuleDecl: VERI_MODULE ID LEFT_PAREN . ModulePorts RIGHT_PAREN SEMI_COLON StatementList VERI_ENDMODULE

    ID  shift, and go to state 11

    ModulePorts  go to state 12


State 11

    7 ModulePorts: ID .

    $default  reduce using rule 7 (ModulePorts)


State 12

    5 ModuleDecl: VERI_MODULE ID LEFT_PAREN ModulePorts . RIGHT_PAREN SEMI_COLON StatementList VERI_ENDMODULE
    6 ModulePorts: ModulePorts . COMMA ID

    RIGHT_PAREN  shift, and go to state 13
    COMMA        shift, and go to state 14


State 13

    5 ModuleDecl: VERI_MODULE ID LEFT_PAREN ModulePorts RIGHT_PAREN . SEMI_COLON StatementList VERI_ENDMODULE

    SEMI_COLON  shift, and go to state 15


State 14

    6 ModulePorts: ModulePorts COMMA . ID

    ID  shift, and go to state 16


State 15

    5 ModuleDecl: VERI_MODULE ID LEFT_PAREN ModulePorts RIGHT_PAREN SEMI_COLON . StatementList VERI_ENDMODULE

    ID           shift, and go to state 17
    VERI_INPUT   shift, and go to state 18
    VERI_OUTPUT  shift, and go to state 19
    VERI_WIRE    shift, and go to state 20
    VERI_ASSIGN  shift, and go to state 21

    StatementList  go to state 22
    Statement      go to state 23
    Assignment     go to state 24
    Instantiation  go to state 25


State 16

    6 ModulePorts: ModulePorts COMMA ID .

    $default  reduce using rule 6 (ModulePorts)


State 17

   21 Instantiation: ID . InstId LEFT_PAREN PortValList RIGHT_PAREN

    ID  shift, and go to state 26

    InstId  go to state 27


State 18

   10 Statement: VERI_INPUT . ConnectList

    ID           shift, and go to state 28
    LEFT_BRAKET  shift, and go to state 29

    ConnectList  go to state 30
    Connect      go to state 31
    Range        go to state 32


State 19

   11 Statement: VERI_OUTPUT . ConnectList

    ID           shift, and go to state 28
    LEFT_BRAKET  shift, and go to state 29

    ConnectList  go to state 33
    Connect      go to state 31
    Range        go to state 32


State 20

   12 Statement: VERI_WIRE . ConnectList

    ID           shift, and go to state 28
    LEFT_BRAKET  shift, and go to state 29

    ConnectList  go to state 34
    Connect      go to state 31
    Range        go to state 32


State 21

   15 Assignment: VERI_ASSIGN . ID LEFT_BRAKET INTEGER RIGHT_BRAKET EQUAL BINARY_VAL

    ID  shift, and go to state 35


State 22

    5 ModuleDecl: VERI_MODULE ID LEFT_PAREN ModulePorts RIGHT_PAREN SEMI_COLON StatementList . VERI_ENDMODULE
    8 StatementList: StatementList . Statement SEMI_COLON

    ID              shift, and go to state 17
    VERI_ENDMODULE  shift, and go to state 36
    VERI_INPUT      shift, and go to state 18
    VERI_OUTPUT     shift, and go to state 19
    VERI_WIRE       shift, and go to state 20
    VERI_ASSIGN     shift, and go to state 21

    Statement      go to state 37
    Assignment     go to state 24
    Instantiation  go to state 25


State 23

    9 StatementList: Statement . SEMI_COLON

    SEMI_COLON  shift, and go to state 38


State 24

   14 Statement: Assignment .

    $default  reduce using rule 14 (Statement)


State 25

   13 Statement: Instantiation .

    $default  reduce using rule 13 (Statement)


State 26

   22 InstId: ID . LEFT_BRAKET INTEGER RIGHT_BRAKET
   23       | ID .

    LEFT_BRAKET  shift, and go to state 39

    $default  reduce using rule 23 (InstId)


State 27

   21 Instantiation: ID InstId . LEFT_PAREN PortValList RIGHT_PAREN

    LEFT_PAREN  shift, and go to state 40


State 28

   19 Connect: ID .

    $default  reduce using rule 19 (Connect)


State 29

   20 Range: LEFT_BRAKET . INTEGER COLON INTEGER RIGHT_BRAKET

    INTEGER  shift, and go to state 41


State 30

   10 Statement: VERI_INPUT ConnectList .
   16 ConnectList: ConnectList . COMMA Connect

    COMMA  shift, and go to state 42

    $default  reduce using rule 10 (Statement)


State 31

   17 ConnectList: Connect .

    $default  reduce using rule 17 (ConnectList)


State 32

   18 Connect: Range . ID

    ID  shift, and go to state 43


State 33

   11 Statement: VERI_OUTPUT ConnectList .
   16 ConnectList: ConnectList . COMMA Connect

    COMMA  shift, and go to state 42

    $default  reduce using rule 11 (Statement)


State 34

   12 Statement: VERI_WIRE ConnectList .
   16 ConnectList: ConnectList . COMMA Connect

    COMMA  shift, and go to state 42

    $default  reduce using rule 12 (Statement)


State 35

   15 Assignment: VERI_ASSIGN ID . LEFT_BRAKET INTEGER RIGHT_BRAKET EQUAL BINARY_VAL

    LEFT_BRAKET  shift, and go to state 44


State 36

    5 ModuleDecl: VERI_MODULE ID LEFT_PAREN ModulePorts RIGHT_PAREN SEMI_COLON StatementList VERI_ENDMODULE .

    $default  reduce using rule 5 (ModuleDecl)


State 37

    8 StatementList: StatementList Statement . SEMI_COLON

    SEMI_COLON  shift, and go to state 45


State 38

    9 StatementList: Statement SEMI_COLON .

    $default  reduce using rule 9 (StatementList)


State 39

   22 InstId: ID LEFT_BRAKET . INTEGER RIGHT_BRAKET

    INTEGER  shift, and go to state 46


State 40

   21 Instantiation: ID InstId LEFT_PAREN . PortValList RIGHT_PAREN

    ID          shift, and go to state 47
    BINARY_VAL  shift, and go to state 48
    LEFT_CURL   shift, and go to state 49
    DOT         shift, and go to state 50

    PortValList  go to state 51
    PortValBus   go to state 52
    PortVal      go to state 53


State 41

   20 Range: LEFT_BRAKET INTEGER . COLON INTEGER RIGHT_BRAKET

    COLON  shift, and go to state 54


State 42

   16 ConnectList: ConnectList COMMA . Connect

    ID           shift, and go to state 28
    LEFT_BRAKET  shift, and go to state 29

    Connect  go to state 55
    Range    go to state 32


State 43

   18 Connect: Range ID .

    $default  reduce using rule 18 (Connect)


State 44

   15 Assignment: VERI_ASSIGN ID LEFT_BRAKET . INTEGER RIGHT_BRAKET EQUAL BINARY_VAL

    INTEGER  shift, and go to state 56


State 45

    8 StatementList: StatementList Statement SEMI_COLON .

    $default  reduce using rule 8 (StatementList)


State 46

   22 InstId: ID LEFT_BRAKET INTEGER . RIGHT_BRAKET

    RIGHT_BRAKET  shift, and go to state 57


State 47

   30 PortVal: ID .
   31        | ID . LEFT_BRAKET INTEGER RIGHT_BRAKET
   32        | ID . LEFT_BRAKET INTEGER COLON INTEGER RIGHT_BRAKET

    LEFT_BRAKET  shift, and go to state 58

    $default  reduce using rule 30 (PortVal)


State 48

   29 PortVal: BINARY_VAL .

    $default  reduce using rule 29 (PortVal)


State 49

   28 PortValBus: LEFT_CURL . PortValList RIGHT_CURL

    ID          shift, and go to state 47
    BINARY_VAL  shift, and go to state 48
    LEFT_CURL   shift, and go to state 49
    DOT         shift, and go to state 50

    PortValList  go to state 59
    PortValBus   go to state 52
    PortVal      go to state 53


State 50

   33 PortVal: DOT . ID LEFT_PAREN PortValList RIGHT_PAREN

    ID  shift, and go to state 60


State 51

   21 Instantiation: ID InstId LEFT_PAREN PortValList . RIGHT_PAREN
   24 PortValList: PortValList . COMMA PortValBus
   25            | PortValList . COMMA PortVal

    RIGHT_PAREN  shift, and go to state 61
    COMMA        shift, and go to state 62


State 52

   27 PortValList: PortValBus .

    $default  reduce using rule 27 (PortValList)


State 53

   26 PortValList: PortVal .

    $default  reduce using rule 26 (PortValList)


State 54

   20 Range: LEFT_BRAKET INTEGER COLON . INTEGER RIGHT_BRAKET

    INTEGER  shift, and go to state 63


State 55

   16 ConnectList: ConnectList COMMA Connect .

    $default  reduce using rule 16 (ConnectList)


State 56

   15 Assignment: VERI_ASSIGN ID LEFT_BRAKET INTEGER . RIGHT_BRAKET EQUAL BINARY_VAL

    RIGHT_BRAKET  shift, and go to state 64


State 57

   22 InstId: ID LEFT_BRAKET INTEGER RIGHT_BRAKET .

    $default  reduce using rule 22 (InstId)


State 58

   31 PortVal: ID LEFT_BRAKET . INTEGER RIGHT_BRAKET
   32        | ID LEFT_BRAKET . INTEGER COLON INTEGER RIGHT_BRAKET

    INTEGER  shift, and go to state 65


State 59

   24 PortValList: PortValList . COMMA PortValBus
   25            | PortValList . COMMA PortVal
   28 PortValBus: LEFT_CURL PortValList . RIGHT_CURL

    COMMA       shift, and go to state 62
    RIGHT_CURL  shift, and go to state 66


State 60

   33 PortVal: DOT ID . LEFT_PAREN PortValList RIGHT_PAREN

    LEFT_PAREN  shift, and go to state 67


State 61

   21 Instantiation: ID InstId LEFT_PAREN PortValList RIGHT_PAREN .

    $default  reduce using rule 21 (Instantiation)


State 62

   24 PortValList: PortValList COMMA . PortValBus
   25            | PortValList COMMA . PortVal

    ID          shift, and go to state 47
    BINARY_VAL  shift, and go to state 48
    LEFT_CURL   shift, and go to state 49
    DOT         shift, and go to state 50

    PortValBus  go to state 68
    PortVal     go to state 69


State 63

   20 Range: LEFT_BRAKET INTEGER COLON INTEGER . RIGHT_BRAKET

    RIGHT_BRAKET  shift, and go to state 70


State 64

   15 Assignment: VERI_ASSIGN ID LEFT_BRAKET INTEGER RIGHT_BRAKET . EQUAL BINARY_VAL

    EQUAL  shift, and go to state 71


State 65

   31 PortVal: ID LEFT_BRAKET INTEGER . RIGHT_BRAKET
   32        | ID LEFT_BRAKET INTEGER . COLON INTEGER RIGHT_BRAKET

    RIGHT_BRAKET  shift, and go to state 72
    COLON         shift, and go to state 73


State 66

   28 PortValBus: LEFT_CURL PortValList RIGHT_CURL .

    $default  reduce using rule 28 (PortValBus)


State 67

   33 PortVal: DOT ID LEFT_PAREN . PortValList RIGHT_PAREN

    ID          shift, and go to state 47
    BINARY_VAL  shift, and go to state 48
    LEFT_CURL   shift, and go to state 49
    DOT         shift, and go to state 50

    PortValList  go to state 74
    PortValBus   go to state 52
    PortVal      go to state 53


State 68

   24 PortValList: PortValList COMMA PortValBus .

    $default  reduce using rule 24 (PortValList)


State 69

   25 PortValList: PortValList COMMA PortVal .

    $default  reduce using rule 25 (PortValList)


State 70

   20 Range: LEFT_BRAKET INTEGER COLON INTEGER RIGHT_BRAKET .

    $default  reduce using rule 20 (Range)


State 71

   15 Assignment: VERI_ASSIGN ID LEFT_BRAKET INTEGER RIGHT_BRAKET EQUAL . BINARY_VAL

    BINARY_VAL  shift, and go to state 75


State 72

   31 PortVal: ID LEFT_BRAKET INTEGER RIGHT_BRAKET .

    $default  reduce using rule 31 (PortVal)


State 73

   32 PortVal: ID LEFT_BRAKET INTEGER COLON . INTEGER RIGHT_BRAKET

    INTEGER  shift, and go to state 76


State 74

   24 PortValList: PortValList . COMMA PortValBus
   25            | PortValList . COMMA PortVal
   33 PortVal: DOT ID LEFT_PAREN PortValList . RIGHT_PAREN

    RIGHT_PAREN  shift, and go to state 77
    COMMA        shift, and go to state 62


State 75

   15 Assignment: VERI_ASSIGN ID LEFT_BRAKET INTEGER RIGHT_BRAKET EQUAL BINARY_VAL .

    $default  reduce using rule 15 (Assignment)


State 76

   32 PortVal: ID LEFT_BRAKET INTEGER COLON INTEGER . RIGHT_BRAKET

    RIGHT_BRAKET  shift, and go to state 78


State 77

   33 PortVal: DOT ID LEFT_PAREN PortValList RIGHT_PAREN .

    $default  reduce using rule 33 (PortVal)


State 78

   32 PortVal: ID LEFT_BRAKET INTEGER COLON INTEGER RIGHT_BRAKET .

    $default  reduce using rule 32 (PortVal)
